[metadata]
description-file = README.rst

[pytest]
junit_family=xunit1

[tool:pytest]
addopts =
    --ignore examples
    --ignore doc

    --ignore gtda/externals/bindings/
    --ignore gtda/externals/gudhi-devel/
    --ignore gtda/externals/hera/
    --ignore gtda/externals/pybind11/
    --ignore gtda/externals/ripser/
    --ignore gtda/tests/test_common.py

    -ra

[flake8]
exclude =
    gtda/externals,
    examples,
    doc
