[metadata]
description-file = README.rst

[tool:pytest]
junit_family=xunit1

addopts =
    --ignore examples
    --ignore doc

    --ignore gtda/externals/bindings/
    --ignore gtda/externals/gudhi-devel/
    --ignore gtda/externals/hera/
    --ignore gtda/externals/pybind11/
    --ignore gtda/externals/ripser/

    -ra

[flake8]
exclude =
    gtda/externals,
    examples,
    doc,
    docs
